fe - overflow fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,11 +27,12 @@
     width: 30%;
 }
 
-@media (min-width: 1000px) {
-    body:not(.no-overflow-hidden) {
-        overflow: hidden;
-    }
+.overflow-hidden {
+    overflow: hidden;
 }
+
+
+
 
 .helper-accordion {
     margin-bottom: 1rem;
